# conexion-ciudadana

./: README.md
server/: pyproject.toml
server/core/: schemas.py
